# rust-learning

./: Cargo.toml  README.md
grep/src/: main.rs
guess/src/: main.rs
learn/: Cargo.toml
learn/src/: control.rs  generics.rs  lib.rs  lifetime.rs  method.rs  panic.rs  result.rs  traits.rs  types.rs
learn/src/collections/: hash_map.rs  mod.rs  vector.rs
learn/src/complex/: array.rs  enums.rs  mod.rs  slice.rs  string.rs  structs.rs  tuple.rs
learn/src/pattern/: example.rs  guard.rs  matchs.rs  mod.rs  option.rs
learn/src/traits/: mod.rs  tarit_bound.rs  tarit_example.rs  tarit_obj.rs  trait_adv.rs  trait_bound.rs  trait_example.rs  trait_obj.rs  trait_types.rs
mini-grep/: Cargo.toml
mini-grep/src/: config.rs
problem/: Cargo.toml
problem/src/: lib.rs
src/: learn_borrow.rs  learn_num.rs  learn_owner.rs  learn_type.rs  main.rs
src/learn/: mod.rs  owner.rs
