[package]
name = "rust-learning"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3

[[bin]]
name = "mini-grep"
path = "mini-grep/src/main.rs"

[[bin]]
name = "guess"
path = "guess/src/main.rs"

[[bin]]
name = "try"
path = "src/main.rs"

[workspace]
members = []

[dependencies]
num = "0.4.0"
rand = "0.8.3"
