[package]
name = "rust-learning"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3

[[bin]]
name = "grep"
path = "grep/src/main.rs"

[[bin]]
name = "guess"
path = "guess/src/main.rs"

[workspace]
members = ["learn", "problem"]

[dependencies]
num = "0.4.0"
rand = "0.8.3"

rust-learn = { version = "0.1.0", path = "learn" }
rust-problem = { version = "0.1.0", path = "problem" }
